# grail-real

./: .env.example  .git-auto-pull-remove.sh  .git-auto-pull.service  .git-auto-pull.sh  .git-auto-pull.timer  debug_tokenizer.py  env-ein41  index.html  miner.py  pyproject.toml  redis.conf  redis.out  start  test_base_model_tokenizer.py  test_worker_tokenizer.py  worker.py
docker/: docker-compose.validator.yml
grail/: __init__.py  logging_utils.py
grail/cli/: mine.py  train.py
grail/environments/: loop.py  math_hendrycks_env.py
grail/infrastructure/: checkpoint_consumer.py  checkpoints.py  comms.py  delta_checkpoint.py  miner_data.py  network.py  parquet_io.py
grail/model/: provider.py  train_loading.py
grail/monitoring/: __init__.py  config.py  manager.py
grail/monitoring/backends/: wandb_backend.py
grail/neurons/: miner.py  trainer.py  validator.py
grail/protocol/: grail_verifier.py
grail/shared/: chat_templates.py  checkpoint_paths.py  constants.py  retention_utils.py  safetensors_utils.py
grail/trainer/: __init__.py  checkpoint_publisher.py  config.py  evaluator.py  inference_server.py  ipc.py  param_tracker.py  replay_buffer.py  snapshot_manager.py  sparse_quality.py  training_process.py  upload_worker.py
grail/trainer/algorithms/: grpo.py
grail/validation/: miner_validator.py  sampling.py  service.py  window_processor.py
grail/validation/validators/: proof.py
research/data/: kernelbook_analysis.py
research/offline_trainer/tests/: test_gpu_integration.py
research/trl/: train_trl_grpo.py  train_trl_grpo_README.md  train_trl_gsm8k.py  train_trl_gsm8k_README.md
scripts/: download_manager.py  test_monitoring_shared.py  test_wandb_shared.py
tests/: test_parquet_io.py
tests/integration/: test_async_trainer.py  test_train_cli_smoke.py  test_validation_service.py
tests/integration/infrastructure/: test_delta_checkpoint_flow.py
tests/unit/infrastructure/: test_chained_deltas.py  test_checkpoint_cleanup.py  test_delta_checkpoint.py
tests/unit/trainer/: test_replay_buffer.py
